--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   text-align: center;
   color: #fff;
+  vertical-align: middle;
 }
 
 .container{
@@ -34,7 +35,6 @@ main{
 article{
   width: 760px;
   height: 200px;
-  /* float: right; */
 }
 
 article div{
@@ -51,7 +51,6 @@ article div:last-child{
 }
 
 section{
-  /* clear: both; */
   width: 760px;
   height: 250px;
 }
@@ -82,10 +81,83 @@ footer{
   background-color: rgb(126, 4, 4);
 }
 
-@media (max-width: 1281px) {
+@media (min-width: 480px) {
   
   *{
-    display: block;
+    width: 480px;
+  }
+  .container{
+    /* width: 960px;
+    margin: 0 auto; */
+    height: auto;
+  }
+  
+  header{
+    /* width: 960px; */
+    height: 100px;
+    background-color: rgb(39, 0, 102);
+    line-height: 100px;
+  }
+  
+  aside{
+    /* width: 200px; */
+    height: 600px;
+    float: left;
+    background-color: rgb(155, 167, 0);
+    line-height: 600px;
+  }
+  main{
+    /* width: 760px; */
+    float: right;
+  }
+  
+  article{
+    /* width: 760px; */
+    height: 200px;
+  }
+  
+  article div{
+    /* width: 380px; */
+    height: 200px;
+    float: left;
+    line-height: 200px;
+  }
+  article div:first-child{
+    background-color: rgb(4, 122, 138);
+  }
+  article div:last-child{
+    background-color: rgb(0, 85, 74);
+  }
+  
+  section{
+    /* width: 760px; */
+    height: 250px;
+  }
+  
+  p{
+    width: 240px;
+    height: 250px;
+    float: left;
+    line-height: 190px;
+  }
+  p:first-child{
+    background-color: rgb(5, 252, 25);
+  }
+  p:nth-child(2){
+    background-color: rgb(23, 199, 0);
+  }
+  p:nth-child(3){
+    background-color: rgb(23, 124, 3);
+  }
+  p:last-child{
+    background-color: rgb(2, 63, 0);
+  }
+  
+  footer{
+    /* width: 760px; */
+    height: 150px;
+    line-height: 150px;
+    background-color: rgb(126, 4, 4);
   }
   
 }
