--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   text-align: center;
   color: #fff;
-  vertical-align: middle;
+  /* vertical-align: middle; */
 }
 
 .container{
